<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Draw!"
        android:id="@+id/tv_drawfrag"
        android:textSize="30sp"
       />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <!-- Top Row: for 6 buttons: new, draw (pencil), erase, save, type, camera -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/pencil"
            android:src="@drawable/pencil" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />


    </LinearLayout>


    <!-- Canvas -->
    <com.example.hp1.exam_management.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />

    <!-- Choose colours to draw with: black, blue, grey -->
    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:background="#000000"
            android:contentDescription="@string/paint"
            android:id="@+id/colour1"
            android:src="@drawable/paint"
            android:tag="#000000" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:background="#4169E1"
            android:contentDescription="@string/paint"
            android:id="@+id/colour2"
            android:src="@drawable/paint"
            android:tag="#4169E1" />

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:background="#5c6274"
            android:contentDescription="@string/paint"
            android:id="@+id/colour3"
            android:src="@drawable/paint"
            android:tag="#5c6274" />

    </LinearLayout>

    </LinearLayout>


</LinearLayout>
